--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,22 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    signingConfigs {
+        release {
+            storeFile file(RELEASE_STORE_FILE)
+            storePassword RELEASE_STORE_PASSWORD
+            keyAlias RELEASE_KEY_ALIAS
+            keyPassword RELEASE_KEY_PASSWORD
+        }
+    }
+    buildTypes {
+        debug {
+            signingConfig signingConfigs.release
+        }
+        release {
+            signingConfig signingConfigs.release
+        }
+    }
 }
 
 dependencies {
@@ -27,8 +43,8 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.0'
     testCompile 'junit:junit:4.12'
 
-    provided('com.tencent.tinker:tinker-android-anno:1.7.7')
-    compile('com.tencent.tinker:tinker-android-lib:1.7.7')
+    provided('com.tencent.tinker:tinker-android-anno:1.7.9')
+    compile('com.tencent.tinker:tinker-android-lib:1.7.9')
 }
 
 if (true) {
@@ -42,6 +58,7 @@ if (true) {
 
         buildConfig {
             tinkerId = tinker_id
+            isProtectedApp = true
         }
         packageConfig{
             configField("TINKER_ID", "tinker_id_1.1")
